feat: performance optimizations (RocksDB 10.4.2, GroupCommit, Helm Configs) and JDK25 prep